# WT99P4C5-S1-Study-print

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults  sdkconfig.defaults.release
components/apps/: CMakeLists.txt  apps.h
components/apps/AiChat/: AiChat.cpp  AiChat.hpp
components/apps/AiChat/assets/: gen_img_app_aichat.py  img_app_aichat.c
components/apps/SoTi/: README.md  SoTi.cpp  SoTi.hpp  cloudflare-worker-soti-upload.js  soti_answer_format.cpp  soti_answer_format.hpp  soti_config.h  soti_mode.c  soti_mode.h  soti_print_sections.cpp  soti_print_sections.hpp  soti_r2_upload.cpp  soti_r2_upload.hpp
components/apps/SoTi/assets/: gen_img_app_soti.py  img_app_soti.c
components/apps/calculator/: Calculator.cpp
components/apps/camera/: Camera.cpp  Camera.hpp  app_video.c  app_video.h  camera_power_bridge.cpp  camera_power_bridge.h
components/apps/game_2048/: Game_2048.cpp
components/apps/music_player/: MusicPlayer.cpp  MusicPlayer.hpp
components/apps/music_player/gui_music/: lv_demo_music.c  lv_demo_music.h  lv_demo_music_list.c  lv_demo_music_main.c  lv_demo_music_main.h
components/apps/parent_chat/: ParentChat.cpp  ParentChat.hpp  parent_chat_api.cpp  parent_chat_api.hpp  parent_chat_launcher.cpp  parent_chat_launcher.hpp  parent_chat_pinyin_dict.c  parent_chat_pinyin_dict.h
components/apps/parent_chat/assets/: gen_img_app_parent_chat.py  img_app_parent_chat.c
components/apps/photo_album/: PhotoAlbum.cpp  PhotoAlbum.hpp
components/apps/photo_album/assets/: gen_photo_album_icon.py  photo_album.c
components/apps/print/: Print.cpp  Print.hpp
components/apps/print/assets/: gen_img_app_print.py  img_app_print.c
components/apps/setting/: Setting.cpp  app_sntp.c
components/apps/setting/ui/: ui.c
components/apps/setting/ui/screens/: ui_ScreenSettingBLE.c  ui_ScreenSettingLight.c  ui_ScreenSettingMain.c  ui_ScreenSettingVolume.c
components/apps/video_player/: VideoPlayer.cpp  VideoPlayer.hpp
components/apps/video_player/esp_lvgl_simple_player/: esp_lvgl_simple_player.c  esp_lvgl_simple_player.h
components/parent_album_sync/: CMakeLists.txt  parent_album_fs.c  parent_album_fs.h  parent_album_sync.cpp
components/parent_album_sync/include/: parent_album_sync.h
components/parent_print_sync/: CMakeLists.txt  parent_print_fs.c  parent_print_fs.h  parent_print_sync.cpp
components/parent_print_sync/include/: parent_print_sync.h
components/usb_escpos_printer/: CMakeLists.txt  Kconfig  ble_escpos_printer.c  escpos_jpeg_raster.c  escpos_text_print.c  uart_escpos_printer.c  usb_escpos_printer.c  utf8_gbk_map.inc
components/usb_escpos_printer/include/: ble_escpos_printer.h  escpos_feature_flags.h  escpos_jpeg_raster.h  escpos_text_print.h  uart_escpos_printer.h  usb_escpos_printer.h
docs/: DESKTOP_BRANCH.md  ENGINEERING_STANDARD.md  OPTIMIZATION_CHANGELOG.md  PARENT_PRINT_AI_PROMPT.md  工程设计文件_勘误版 (1) (1)(1).docx
main/: CMakeLists.txt  idf_component.yml  main.cpp
tools/: gen_lv_font_ui_zh.py  gen_parent_chat_pinyin_dict.py  gen_symbols_hans_common.py  gen_utf8_gbk_table.py
(+85 files in other folders)
