idf_component_register(
    SRCS
        "parent_print_fs.c"
        "parent_print_sync.cpp"
    INCLUDE_DIRS "include" "../apps/SoTi"
    REQUIRES
        esp_http_client
        esp-tls
        esp_wifi
        esp_netif
        json
        fatfs
        vfs
        power_manager
        spiffs
        wt99p4c5_s1_board
        usb_escpos_printer
        parent_album_sync
        parent_policy
)
